# cpp

./: .clangd  Candies.cpp  E_Three_Strings.cpp  c++_version_check.cpp  i128.cpp  myCppCode.code-workspace  readme.md  readme.txt  tmp.cpp  vocabulary.md  vscode.cpp  个人板子.cpp  心得.md  进制转化.md
.cph/: .tmp.cpp_b8b413309f35847fade7aa77275a92d8.prob  .vscode.cpp_525d0ea53c1ab3342d55cc19eb97153f.prob
.obsidian/: workspace.json
atcoder/abc382/: C_Kaiten_Sushi.cpp
c/: 1-1.c  1-3-001.c  1.1.c  1.2.c  1.3.c  11111.c  acmtext.c  chenmi.c  chineseinput.c  helloworld.c  hu.c  io.c  ku.c  lanqiao.c  level1-1(2).c  level1-1(3).c  level1-1.c  level1-3.c  newtext.cpp  schooltext.c  suiji.c  text.c  try.c
c++/搜索与图论/: 总结.md  搜索与图论（2）总结.md
c/gkk/: for.c
clion/: CMakeLists.txt  i128.cpp  main.cpp  test.cpp
clion/student_tmp/: A.txt  B.txt  CMakeLists.txt  students.c  students.h
codeforces/231109/: c2.cpp
codeforces/Codeforces Round 913 (Div. 3)/: 总结.md
codeforces/Codeforces Round 917 (Div. 2)/: 总结.md
codeforces/Codeforces Round 987 (Div. 2)/: tmp.cpp
codeforces/Codeforces Round 987 (Div. 2)/.cph/: .tmp.cpp_de29bd2bfae36ed5e29915ce08a1c72f.prob
codeforces/Codeforces Round 991 (Div. 3)/: F_Maximum_modulo_equality.cpp
对拍/duipai-windows/: duipai.cpp  my_code.cpp
我的板子/: lca(倍增）.cpp  线性筛.cpp  组合数(1e5）.cpp
配置相关/sublime/: .clang-format
